--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,9 @@ main.pdf
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
+#*.svg
+
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
